alinmapay/openshift-KDC/ms-referals/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: referals
spec:
  selector:
    app: referals
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8080
  type: ClusterIP
